--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,22 @@ services:
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: meetapp
     ports:
-      - "5432:5432"
-  
+      - '5432:5432'
+
+  db-test:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: meetapp_test
+    ports:
+      - '5433:5432'
+
   client:
     image: node:20-alpine
     working_dir: /app
     ports:
-      - "3000:3000"
+      - '3000:3000'
     environment:
       DATABASE_URL: postgres://admin:admin@db:5432/meetapp
     depends_on:
